tentativa de altenticação

--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=1234
 
 spring.jpa.show-sql = true
+
+
+spring.webflux.cors.allowed-origins=http://localhost:3000
