--- a/lids-back-main/pom.xml
+++ b/lids-back-main/pom.xml
@@ -67,11 +67,12 @@
 			<version>3.0.0</version>
 		</dependency> -->
 
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.28</version>
+</dependency>
+
 
 	</dependencies>
 
