--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/lids
-
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/lids_bd
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
