--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/lids_bd
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=Thata
+
 
 spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.open-in-view= true
 
 spring.webflux.cors.allowed-origins=http://localhost:3000
