--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/lids_bd
-spring.datasource.username=postgres
-spring.datasource.password=Thata
+
+spring.datasource.url=jdbc:mysql://localhost:3306/lids
+
+spring.datasource.username=root
+spring.datasource.password=1234
 
 
 spring.jpa.show-sql = true
