--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.open-in-view= true
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.webflux.cors.allowed-origins=http://localhost:3000
