--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -1,13 +1,12 @@
+spring.jpa.database=POSTGRESQL
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/lids_bd?user=postgres&password=root
+spring.datasource.username=postgres
+spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://localhost:3306/lids
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
 
-spring.datasource.username=root
-spring.datasource.password=1234
-
-
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto= update
-spring.jpa.open-in-view= true
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
