--- a/lids-back-main/src/main/resources/application.properties
+++ b/lids-back-main/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/lids
-
-
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.jpa.database=POSTGRESQL
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url =jdbc:postgresql://localhost:5432/lids_bd?user=postgres&password=root
+spring.datasource.username = postgres
+spring.datasource.password = root
 
 
 spring.jpa.show-sql = true
